test/types/string/assignToChar/testInit.7.good
Helpers.chpl:2: In function 'testInit':
Helpers.chpl:3: error: cannot initialize 'x' of type 'int(8)' from '"hello"'
  testInit.chpl:18: called as testInit(param strBytes = "hello", type toType = int(8))
